istio-cop/smallstep/elephant-web-api-https-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: elephant-web-api-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443 # 80
      name: https # http
      protocol: HTTPS # HTTP
    hosts:
    - "elephant.io"
    tls:
      mode: SIMPLE
      credentialName: elephant-cert
