istio-cop/smallstep/hellocloud-web-api-https-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hellocloud-web-api-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443 # 80
      name: https # http
      protocol: HTTPS # HTTP
    hosts:
    - "hellocloud.io"
    tls:
      mode: SIMPLE
      credentialName: hellocloud-cert
