istio-cop/smallstep/rabbit-web-api-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rabbit-web-api-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "rabbit.io"
