istio-cop/smallstep/rabbit-web-api-https-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: rabbit-web-api-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443 # 80
      name: https # http
      protocol: HTTPS # HTTP
    hosts:
    - "rabbit.io"
    tls:
      mode: SIMPLE
      credentialName: rabbit-cert
