istio-cop/smallstep/hellocloud-web-api-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hellocloud-web-api-gw-vs
spec:
  hosts:
  - "hellocloud.io"
  gateways:
  - hellocloud-web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.hellocloud.svc.cluster.local
        port:
          number: 8080
