istio-cop/smallstep/rabbit-web-api-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbit-web-api-gw-vs
spec:
  hosts:
  - "rabbit.io"
  gateways:
  - rabbit-web-api-gateway
  http:
  - route:
    - destination:
        host: web-api.rabbit.svc.cluster.local
        port:
          number: 8080
